# arinc424

./: .gitignore  LICENCE.md  README.md  pyproject.toml  run_tests.sh  test.sh
.github/workflows/: build.yml  create-and-publish-release.yml  python-package.yml
arinc424/: decoder.py  record.py  utils.py
arinc424/records/: __init__.py  airport.py  airport_communication.py  airport_gate.py  airways_marker.py  alternate_record.py  company_route.py  controlled_airspace.py  cruising_tables.py  enroute_airway.py  enroute_airway_restricted.py  enroute_comms.py  enroute_holding.py  enroute_marker.py  enroute_waypoint.py  fir_uir.py  flight_planning.py  gate.py  geo_reference_table.py  gls.py  heliport.py  heliport_comms.py  heliport_terminal_waypoint.py  localizer_glideslope.py  localizer_marker.py  mls.py  mora.py  msa.py  navaid_ndb.py  navaid_vhf.py  path_point.py  preferred_route.py  restrictive_airspace.py  runway.py  sid_star_app.py  sids.py  taa.py  waypoint.py
data/ARINC-424-18/: airport  airport_communications  cruising_tables  enroute_communications  enroute_holding  enroute_marker  gates  heliport  instrument_approaches  localizer_glideslope  mls  navaid_vhf  restrictive_airspace  runway  terminal_waypoint
data/questionable/: enroute_communications
debug/: unknown_records
src/: README.md  arinc424.py  database.py  example.py  main.py  sections.py
src/arinc424/: __init__.py  arinc424.py  database.py  decoder.py  main.py  record.py  sections.py  utils.py
src/arinc424/definitions/: Airport.py  AirportCommunication.py  AirportGate.py  (+30 more)
src/records/: airport.py  navaid.py
tests/: test.py  test.sh  test_0.py  test_airway.py  test_decode.py  test_holding.py  test_marker.py  test_ndb_navaid.py  test_reads.py  test_scratchpad.py  test_vhf_navaid.py  test_waypoint.py
tests/example_data/: enroute_airway.txt  enroute_airway_restricted.txt  enroute_communications.txt  enroute_marker.txt  enroute_waypoint.txt  instrument_approaches.txt  localizer_glideslope.txt  localizer_marker.txt  mls.txt  mora.txt  msa.txt  ndb_navaid.txt  sids.txt  vhf_navaid.txt
(+24 files in other folders)
