[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arinc424"
version = "0.2.0"
authors = [
  { name="Jack Laverty", email="jacktlaverty@gmail.com" },
]
description = "A library for ARINC-424, the international standard file format for aircraft navigation data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jack-laverty/arinc424"
"Bug Tracker" = "https://github.com/jack-laverty/arinc424/issues"